--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
       background-color: #808080;
       border: none;
       color: white;
-      padding: 15px;
       text-align: center;
       float: center;
       text-decoration: none;
       display: inline-block;
       font-size: 20px;
-      width: 5%;
       border-radius: 15px;
     }
     
@@ -111,7 +109,7 @@
 <input type="button" value="Hit The Target" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
-<div id="DiscriptionUIHidden">
+<div id="DescriptionUIHidden">
   <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
   <p>This Game Was Made: Walmart Harrison(Logan)</p>
   
