--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       border-radius: 15px;
     }
     
+    .DescriptionButton:hover {
+      background: #757575;
+    }
+    
     .game_button{
       background-color: #808080;
       border: none;
