--- a/index.html
+++ b/index.html
@@ -117,12 +117,8 @@
   <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
   <p>This Game Was Made: Walmart Harrison(Logan)</p>
   
-  <input type="button" value="Play Game" id="myButton" class="DescriptionButton">
+  <input type="button" value="Play Game" id="myButton" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
   <input type="button" value="Close" id="myButton" class="DescriptionButton" onclick="CloseHitTheTargetDescription()">
-</div>
- 
-<div class = button_div>
-<a href = 'hit-the-target.html';" id="myButton" class="game_button">Hit the target</a>                                                                                                                                                                                 
 </div>
                                                                    
 <div class = button_div>
