--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <p>Editor: Tyler Spruill</p>
   </div>
   
-  <input type="button" value="Play Game" id="myButton" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
-  <input type="button" value="Close" id="myButton" class="DescriptionButton" onclick="CloseHitTheTargetDescription()">
+  <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
+  <input type="button" value="Close" class="DescriptionButton" onclick="CloseHitTheTargetDescription()">
 </div>
                                                                    
 <div class = button_div>
