--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <input type="button" value="Hit The Target" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
-<div id="DescriptionUIHidden">
+<div id="HitTheTarget DescriptionUIHidden">
   <div id="GameDescription">
     <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
     <p>Creator: Walmart Harrison (Logan)</p>
