--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Hit The Target" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
+<input type="button" value="Hit The Target - A" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
 <div id="HitTheTarget DescriptionUIHidden">
