--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Hit The Target - B" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
+<input type="button" value="Hit The Target - C" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
-<div id="HitTheTarget" id="DescriptionUIHidden">
+<div class="HitTheTarget" id="DescriptionUIHidden">
   <div id="GameDescription">
     <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
     <p>Creator: Walmart Harrison (Logan)</p>
