--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Hit The Target - C" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
+<input type="button" value="Hit The Target - D" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
 <div class="HitTheTarget" id="DescriptionUIHidden">
