--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Hit The Target - E" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
+<input type="button" value="Hit The Target - Q" id="myButton" class="game_button" onclick="ShowHitTheTargetDescription()">                                                                                                                                                                           
 </div>  
 
 <div class="HitTheTarget" id="DescriptionUIHidden">
@@ -165,7 +165,7 @@
       var button = hitTheTargetButton[0];
       button.id = 'DescriptionUIOn';
       button.classList.add('GameDescriptionUI');
-      alert("Added");
+      alert(hitTheTargetButton.length);
     }
                                                                    
     function CloseHitTheTargetDescription() {
