--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
-  <input type="button" value="Close" class="DescriptionButton" onclick="CloseHitTheTargetDescription()">
+  <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('HitTheTargetShown', 'HitTheTargetHidden')">
 </div>
                                                                    
 <div class = button_div>
