--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <center>
   
 <div class = button_div>
-<input type="button" value="Hit The Target - TylerIsAVeryGayMan" id="myButton" class="game_button" onclick="ChangeDescription('HitTheTargetHidden', 'HitTheTargetShown')">                                                                                                                                                                           
+<input type="button" value="Hit The Target" id="myButton" class="game_button" onclick="ChangeDescription('HitTheTargetHidden', 'HitTheTargetShown')">                                                                                                                                                                           
 </div>  
 
 <div id="HitTheTargetHidden" class="GameDescriptionUI">
