--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <div id="2048Hidden" class="GameDescriptionUI">
   <div id="GameDescription">
-    <p>You SHould Know what 2048 is otherwise you are dumb</p>
+    <p>You Should Know what 2048 is otherwise you are dumb</p>
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
