--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('2048Hidden', '2048Shown')">                                                                                                                                                                           
+<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('2048Hidden', '2048Shown')">                                                                                                                                                                           
 </div>  
 
 <div id="2048Hidden" class="GameDescriptionUI">
