--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <p>You Should Know what 2048 is otherwise you are dumb</p>
   </div>
   
-  <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='2048/index.html'">
+  <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='2048/2048-master/index.html'">
   <input type="button" value="Close" class="DescriptionButton" onclick="ChangeDescription('TwentyFourtyEightShown', 'TwentyFourtyEightHidden')">
 </div>                               
 
