--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       float: center;
       color: #121212;
       padding: 15px;
+      
+      clip: rect(0px,60px,200px,0px);
     }
     
     .DescriptionButton {
