--- a/cookie-clicker-master/index.html
+++ b/cookie-clicker-master/index.html
@@ -48,7 +48,8 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 
 <div id="topBar">
 	<div>
-	  <button onclick="location.href = '../index.html';" id="myButton" class="float-left submit-button" >Home</button>
+	  <b>Cookie Clicker</b> &copy; <a href="http://orteil.dashnet.org" target="_blank">Orteil</a>, 2013 - hosted by <a href="http://dashnet.org" target="_blank">DashNet</a> | <a href="http://twitter.com/orteil42" target="_blank">twitter</a> | <a href="http://orteil42.tumblr.com" target="_blank">tumblr</a> | Help? Bugs? Ideas? Check out the <a href="http://forum.dashnet.org" target="_blank">forum</a>! | Chat with us on <a href="http://forum.dashnet.org/discussion/277/irc-chat-channel/p1" target="_blank">IRC</a> | Getting a black screen? Try pressing ctrl-F5!
+	  <div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
 	</div>
 </div>
 
