--- a/snake-game.html
+++ b/snake-game.html
@@ -17,11 +17,14 @@
   canvas {
     border: 1px solid white;
   }
+    
+   
+    
   </style>
   <link rel="stylesheet" href="Global.css">
 </head>
 <body>
-<button class="button-28" role="button">Home Button</button>
+<button class="button-28" role="button">Home</button>
 
 </body>
 
