--- a/snake-game.html
+++ b/snake-game.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="Global.css">
 </head>
 <body>
-<button class="button-28" role="button">Home</button>
+<button class="button-28" role="button">Home Button</button>
 
 </body>
 
