--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       color: #121212;
       padding: 15px;
       
-      clip: rect(0px,60px,200px,0px);
+      clip-path: rect(10px, 20px, 30px, 40px);
     }
     
     .DescriptionButton {
