--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       color: #121212;
       padding: 15px;
       animation-name: animateCrop;
-      animation-duration: 4s; 
+      animation-duration: 2s; 
     }
     
     @keyframes animateCrop {
-      from {clip-path: inset(0 0 0 0);}
-      to {clip-path: inset(0 0 100% 0);}
+      from {clip-path: inset(0 0 100% 0);}
+      to {clip-path: inset(0 0 0% 0);}
     }
     
     .DescriptionButton {
