--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           break;
         }
       }
-      if (!toAdd) {
+      if (toAdd) {
         listOfObjects.push(CurrentID);
         listOfObjects.push(NewID);
       }
