--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       /*from {clip-path: inset(0 0 100% 0);}
       to {clip-path: inset(0 0 0% 0);}*/
       from { height: 0px; }
-      to { height: 250px; }
+      to {  }
     }
     
      @keyframes animateCloseCrop {
@@ -198,7 +198,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
