--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       float: center;
       color: #121212;
       padding: 15px;
-      height: 250px;
       animation-name: animateOpenCrop;
       animation-duration: 2s; 
     }
@@ -198,7 +197,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
