--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       /*from {clip-path: inset(0 0 100% 0);}
       to {clip-path: inset(0 0 0% 0);}*/
       from { height: 0px; }
-      to {  }
+      to { height: auto; }
     }
     
      @keyframes animateCloseCrop {
