--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       font-size: 20px;
       border-radius: 15px;
       
+      padding: 15px;
       position: absolute;
       bottom: 0px;
     }
