--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       float: center;
       color: #121212;
       padding: 15px;
-      height 250px;
+      height: 250px;
       
       animation-name: animateOpenCrop;
       animation-duration: 2s; 
