--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       padding: 10px;
       border: 3px solid #121212;
       border-radius: 15px;
+      height: 200px;
     }
     
     .GameDescriptionUI {
@@ -197,7 +198,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
