--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     @keyframes animateCloseCrop {
       from { 
         height: 250px; 
-        /*clip-path: inset(0 0 100% 0);*/
+        clip-path: inset(0 0 100% 0);
       }
       to { height: 0px; 
-        /*clip-path: inset(0 0 0% 0);*/
+        clip-path: inset(0 0 0% 0);
       }
     }
     
