--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         height: 250px; 
         clip-path: inset(0 0 100% 0);
       }
-      to { height: 0px; 
+      to { 
+        height: 0px; 
         clip-path: inset(0 0 0% 0);
       }
     }
@@ -28,7 +29,7 @@
     #HitTheTargetHidden {
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
-      height: 0px;
+      display: none;
     }
     
     #TwentyFourtyEightHidden {
@@ -206,7 +207,7 @@
 <!--- 2048 Button Code ---!>
                            
 <div class = button_div>
-<input type="button" value="2048 Game" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
+<input type="button" value="2048" id="myButton" class="game_button" onclick="ChangeDescription('TwentyFourtyEightHidden', 'TwentyFourtyEightShown', false)">                                                                                                                                                                           
 </div>  
 
 <div id="TwentyFourtyEightHidden" class="GameDescriptionUI">
@@ -313,23 +314,6 @@
     var listOfObjects = [];
 
     function ChangeDescription(CurrentID, NewID, Add) {
-      /*if (Add) {
-        var i = 0;
-        var toAdd = true;
-        for (i = 0; i < listOfObjects.length; i++) {
-          if (listOfObjects[i] == CurrentID) {
-            toAdd = false;
-            break;
-          }
-        }
-        if (toAdd) {
-          listOfObjects.push(CurrentID);
-          listOfObjects.push(NewID);
-        }
-      }
-      for (i = 0; i < listOfObjects.length / 2; i += 2) {
-        document.getElementById(listOfObjects[i]).id = listOfObjects[i + 1];    
-      }*/
       document.getElementById(CurrentID).id = NewID;
     }                                                           
   </script>
