--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     #HitTheTargetHidden {
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
-      display: none;
+      clip-path: inset(0 0 100% 0);
     }
     
     #TwentyFourtyEightHidden {
