--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       to { 
         height: 0px; 
         clip-path: inset(0 0 0% 0);
+        display: none;
       }
     }
     
     #HitTheTargetHidden {
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
+      height: 0;
       clip-path: inset(0 0 100% 0);
     }
     
