--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
         height: 0px; 
         clip-path: inset(0 0 100% 0);
       }
-      to { height: 250px; 
+      to { 
+        height: 250px; 
         clip-path: inset(0 0 0% 0);
+        display: none;
       }
     }
     
@@ -129,6 +131,7 @@
       background-color: #808080;
       border: none;
       color: white;
+      padding: 15px;
       text-align: center;
       float: center;
       text-decoration: none;
