--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       animation-duration: 1s; 
       height: 0;
       clip-path: inset(0 0 100% 0);
-      display: none;
+      overflow: hidden;
     }
     
     #TwentyFourtyEightHidden {
