--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
       height: 0;
-      clip-path: inset(0 0 100% 0);
       overflow: hidden;
     }
     
@@ -202,7 +201,7 @@
 
 <div id="HitTheTargetHidden" class="GameDescriptionUI">
   <div id="GameDescription">
-    <p>Welcome to Hit The Target. In Hit The Target You Test you reaction speed by hitting the moving target. If you hit the randomly generated blocks than it is game over</p>
+    <p>You hit a target</p>
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
