--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     #HitTheTargetHidden {
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
+      padding: 0px;
       height: 0;
       overflow: hidden;
     }
@@ -201,7 +202,7 @@
 
 <div id="HitTheTargetHidden" class="GameDescriptionUI">
   <div id="GameDescription">
-    <p>You hit a target</p>
+    <p>You hit a target. Then you dont hit the boxes. Then you win.</p>
   </div>
   
   <input type="button" value="Play Game" class="DescriptionButton" onclick="window.location.href='hit-the-target.html'">
