--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       from { 
         height: 250px; 
         clip-path: inset(0 0 0 0);
+        padding: 15px;
       }
       to { 
         height: 0px; 
         clip-path: inset(0 0 100% 0);
         display: none;
+        padding: 0px;
       }
     }
     
@@ -31,7 +33,7 @@
       animation-name: animateCloseCrop;
       animation-duration: 1s; 
       padding: 0px;
-      height: 0;
+      height: 0px;
       overflow: hidden;
     }
     
