--- a/index.html
+++ b/index.html
@@ -337,17 +337,24 @@
 
   <script>
     var listOfObjects = [];
+    var listOfNewID = [];
 
-    function ChangeDescription(CurrentID, NewID, DoNotAdd) {      
+    function ChangeDescription(CurrentID, NewID, Add) {      
       var element = document.getElementById(CurrentID);
-      if (!DoNotAdd) {
-        alert(CurrentID);
-        listOfObjects.push(NewID);
+      if (Add) {
+        if (!listOfObjects.includes(CurrentID)) {
+          listOfObjects.push(CurrentID);
+          listOfNewID.push(NewID);
+        }
       }
 
       if (element == null) {
         ChangeDescription(NewID, CurrentID, false);
       } else {
+        var i = 0;
+        for (i = 0; i < listOfObjects.length; i++) {
+          document.getElementById(listOfObjects[i]).id = listOfNewID[i];
+        }
         element.id = NewID;
       } 
     }                                                           
